# cta-goh-resupply-patcher

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Item.h  Mods.h  Patcher.cpp  Patcher.h  Settings.h  Timer.cpp  Timer.h  main.cpp
src/mods/: Hortens_Frontline.h  Hotmod1986.h  Mace.h  Mod.h  Valour.h  West81.h
